# The-Fizz-Bizz

./: .gitignore  MVP_CHECKIN.md  README.md
backend/: .env  .env.example  add_live_beer_project.py  fizzbizz.db  link_recipe_yeasts.py  package-lock.json  pyproject.toml  railway.toml  scrape_labs.py  scrape_recipes.py  scrape_yeasts.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: b074d7a27348_initial_tables.py  c8f2a1b3d9e0_add_social_features.py  e5f6a7b8c9d0_add_best_for_to_yeasts.py  f6g7h8i9j0k1_add_lab_enrichment.py  g7h8i9j0k1l2_add_yeast_profile_id_to_recipe_ingredients.py  h8i9j0k1l2m3_add_interval_seconds_to_cer_state.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  calculations.py  explore.py  friends.py  lookup.py  projects.py  recipes.py  reminders.py  users.py  yeasts.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  seed.py  seed_lacto.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: calculations.py  cer_engine.py  live_cer_task.py  twilio_service.py
frontend/: .env  index.html  package-lock.json  package.json  railway.toml  start.sh
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAuth.tsx  useLookups.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CalculatorsPage.module.css  CalculatorsPage.tsx  DashboardPage.module.css  DashboardPage.tsx  ExplorePage.module.css  ExplorePage.tsx  LoginPage.tsx  ProfilePage.module.css  ProfilePage.tsx  ProjectDetailPage.module.css  (+9 more)
(+3 files in other folders)
